// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    There are 
    1
     
    expense
     totalling 
    $1.22 
     ammount
  </h1>
</div>
`;

exports[`Should correctly render expenses summary with more than 1 expense 1`] = `
<div>
  <h1>
    There are 
    5
     
    expenses
     totalling 
    $453,434.32 
     ammount
  </h1>
</div>
`;
